DBが起動するまで待つようにした
20s固定値で待っているだけ・・・

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - postgres:postgres
     environment:
       - DB_HOST=postgres
-    command: npm run installStart
+    command: npm run installStart:wait
 
   postgres:
     container_name: mypostgres
